compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__bit_arrays__empty.snap
---
source: compiler-core/src/fsharp/tests/bit_arrays.rs
expression: "\nfn go() {\n  <<>>\n}\n"
---
module rec my.``mod``

let private go () = begin
    BitArray.Empty
end
