compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__bit_arrays__empty_match.snap
---
source: compiler-core/src/fsharp/tests/bit_arrays.rs
assertion_line: 236
expression: "\nfn go(x) {\n  let assert <<>> = x\n}\n"
---
module rec my.``mod``

let private go (x: BitArray) = begin
    let (BitArray.Empty) = x
    (BitArray.Empty)
end
