compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__bit_arrays__explicit_sized.snap
---
source: compiler-core/src/fsharp/tests/bit_arrays.rs
expression: "\nfn go() {\n  <<256:size(64)>>\n}\n"
---
module rec my.``mod``

let private go () = begin
    BitArray.Create(
        { endianness = None; size = Some(64L); unit = None; signed = None; value = BitArraySegmentValue.Int(256L) }
    )
end
